--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,3 +1,3 @@
 ---
-profile::base::message: This message came from the common hiera common datasource.
+profile::base::message: This message came from the common hiera datasource.
 
